--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,14 @@ dependencies:
   firebase_dynamic_links: ^2.0.10
   flutter:
     sdk: flutter
+  flutter_image_compress: ^1.1.0
   flutter_redux: ^0.8.2
   flutter_slidable: ^0.6.0
   flutter_speed_dial: ^4.4.0+1
   flutter_spinkit: ^5.1.0
+  image_cropper: ^1.4.1
+  image_picker: ^0.8.3+2
+  path_provider: ^2.0.2
   pull_to_refresh: ^2.0.0
   redux: ^5.0.0
   redux_epics: ^0.15.0
