--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   shared_preferences: ^2.0.8
   table_calendar: ^3.0.2
   url_launcher: ^6.0.12
+  window_size:
+    git:
+      url: git://github.com/google/flutter-desktop-embedding.git
+      path: plugins/window_size
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
